--- a/package.json
+++ b/package.json
@@ -32,5 +32,8 @@
     "jest": "^29.7.0",
     "nodemon": "^3.0.1",
     "supertest": "^6.3.3"
+  },
+  "engines": {
+    "node": ">=14.20.1"
   }
 }
