--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "./src/index.js",
   "type": "module",
   "scripts": {
-    "start": "NODE_OPTIONS='--experimental-specifier-resolution=node' node src/index.js",
+    "start": "node src/index.js",
     "serve": "nodemon --exec babel-node ./src/index.js",
     "test": "jest --passWithNoTests --detectOpenHandles"
   },
